# baiducloud-cce-cni-driver

./: .gitignore  LICENSE  Makefile  README-zh_CN.md  README.md  build-v1-local.sh  build.sh  ci.yml  go.mod  go.sum  go.work  go.work.sum  main.go
bce-sdk-go/doc/: GAIADB.md  IAM.md
cce-network-performance/: Cargo.toml  Makefile
cce-network-performance/.cargo/: config.toml
cce-network-performance/cce-cni-common/: Cargo.toml
cce-network-performance/cce-cni-plugins/: Cargo.toml
cce-network-performance/cni-data-path/: Cargo.toml
cce-network-performance/cni-data-path/ebpf/: tc_master_slave_svc.rs
cce-network-performance/cni-data-path/src/: main.rs
cce-network-performance/cni-xtask/: Cargo.toml
cce-network-performance/data-path-loader/: Cargo.toml
cce-network-v2/: .vscode-ctags  GO_VERSION  Makefile  Makefile.defs  Makefile.quiet  README.md  go.mod  go.sum
cce-network-v2/cmd/: Makefile
cce-network-v2/docs/: release.md
cce-network-v2/hack/: custom-boilerplate.go.txt  spdx-copyright-header.txt
cce-network-v2/operator/: .gitignore  Makefile  allocator_providers.go  cmdref.go  flags.go  main.go  provider_operator_register.go  provider_private_cloud_base_flags.go  provider_private_cloud_base_register.go  provider_rdma_register.go  provider_vpc_eni_register.go  (+1 more)
cni/: README.md
docs/: deploy-with-aksk.md  deploy-with-pre-allocated-ip.md  derived-config.md  dynamic-config.md  release.md  sysctl.md  upgrade-minor-version.md
eip-operator/: Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
hack/: update-codegen-dockerized.sh  update-codegen.sh
(+1352 files in other folders)
